[gd_scene load_steps=4 format=2]

[ext_resource path="res://Menu/SettingsMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Text.tres" type="DynamicFont" id=2]
[ext_resource path="res://Menu/MenuButton.tscn" type="PackedScene" id=3]

[node name="SettingsMenu" type="Control" groups=[
"menu",
]]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Center" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="Center"]
margin_left = 392.0
margin_top = 264.0
margin_right = 632.0
margin_bottom = 336.0

[node name="Label_Volume" type="Label" parent="Center/VBox"]
margin_right = 240.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 2 )
text = "Volume"
align = 1
valign = 1

[node name="VBox_Volume" type="VBoxContainer" parent="Center/VBox"]
margin_top = 34.0
margin_right = 240.0
margin_bottom = 34.0
alignment = 1

[node name="Label_Controls" type="Label" parent="Center/VBox"]
margin_top = 38.0
margin_right = 240.0
margin_bottom = 68.0
rect_min_size = Vector2( 240, 30 )
custom_fonts/font = ExtResource( 2 )
text = "Controls"
align = 1
valign = 1

[node name="VBox_Controls" type="VBoxContainer" parent="Center/VBox"]
margin_top = 72.0
margin_right = 240.0
margin_bottom = 72.0

[node name="Label_Prompt" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -162.0
margin_top = -40.0
margin_right = 158.0
margin_bottom = -20.0
align = 1
valign = 1

[node name="ButtonBack" parent="." instance=ExtResource( 3 )]
margin_left = 100.0
margin_top = 520.0
margin_right = 300.0
margin_bottom = 580.0
text = "Back"

[connection signal="pressed" from="ButtonBack" to="." method="_on_ButtonBack_pressed"]
